--- a/100 days Python bootcamp/Web Development with Flask/my-personal-site/templates/english.html
+++ b/100 days Python bootcamp/Web Development with Flask/my-personal-site/templates/english.html
@@ -10,71 +10,69 @@
   <body>
     <table cellspacing="20" class="b">
       <tbody><tr>
-        <td><img src="static/images/jambor_zoltan.jpg" width="230" alt="my profile picture"></td>
-        <td><h1>Jámbor Zoltán Péter</h1>
+        <td><img src="static/images/jambor_zoltan.jpg" width="200" alt="my profile picture"></td>
+        <td><h1>Zoltan Peter Jambor</h1>
         <p><em>Oracle Database Administrator</em></p>
         <p>Experienced Database Administrator with a demonstrated history of working in the facilities services industry. 
             Skilled in Oracle Database, Linux System Administration, Databases, Windows Server, and C#. 
             Strong information technology professional with a Bachelor of Science (BSc) focused in Computer Science (Software Information Technologist) from Eszterházy Károly College. </p>
         <p>
-            Badges: <a href="https://www.credly.com/users/zoltan-jambor/badges" target="_blank" rel="noopener noreferrer">youracclaim.com/users/zoltan-jambor</a>
+            Badges: <a href="https://youracclaim.com/users/zoltan-jambor">youracclaim.com/users/zoltan-jambor</a>
         </p>
-        <p>GitHub: <a href="https://github.com/zjambor" target="_blank" rel="noopener noreferrer">github.com/zjambor</a></p>
-        <p><a href="/english" target="_blank" rel="noopener noreferrer">English version</a></p>
         </td>
       </tr>
       </tbody>
     </table>
     <hr>
-    <h3>Minősítések</h3>
+    <h3>Licenses & certifications</h3>
     <ul>
       <li>Oracle Database 11g Administrator Certified Associate</li>
       <li>Oracle Autonomous Database Cloud 2019 Certified Specialist</li>
     </ul>
     <hr>
-    <h3>Képzettség</h3>
+    <h3>Education</h3>
     <table cellspacing="10" class="a">
       <thead>
         <tr>
-          <th>Dátum</th>
-          <th>Oktatási intézmény</th>
-          <th>Diploma fokozata</th>
-          <th>Szak</th>
+          <th>Dates</th>
+          <th>School</th>
+          <th>Degree</th>
+          <th>Field of study</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>2016-2021</td>
-          <td>Eötvös Loránd Tudományegyetem</td>
+          <td>Eötvös Loránd University</td>
           <td>Master of Science (MSc)</td>
-          <td>Programtervező informatikus</td>
+          <td>Computer Software Engineering</td>
         </tr>
         <tr>
           <td>2009-2015</td>
-          <td>Eszterházy Károly Főiskola</td>
+          <td>Eszterházy Károly College</td>
           <td>Bachelor of Science (BSc)</td>
-          <td>Programtervező informatikus</td>
+          <td>Computer Science</td>
         </tr>        
       </tbody>
     </table>
     <hr>
-    <h3>Kompetenciák</h3>
+    <h3>Skills</h3>
     <table cellspacing="10" class="b">
       <tbody><tr>
-        <td>Adatbázis adminisztráció: Oracle, Microsoft SQL Server, PostgreSQL, MongoDB</td>
+        <td>Database Administration: Oracle, Microsoft SQL Server, PostgreSQL, MongoDB</td>
       </tr>
       <tr>
-        <td>Programozási nyelvek: Python, Java, C#, C++, SQL, PL/SQL, Transact-SQL</td>
+        <td>Programming Languages: Python, Java, C#, C++, SQL, PL/SQL, Transact-SQL</td>
       </tr>
        <tr>
-        <td>Szerver adminisztráció: SUSE Enterprise Linux, RedHat/CentOS, Debian</td>
+        <td>Server Administration: SUSE Enterprise Linux, RedHat/CentOS, Debian</td>
       </tr>
       <tr>
-        <td>Magas rendelkezésre állás megoldások: Oracle RAC, Oracle Data Guard, Microsoft Failover Clutering</td>
+        <td>High Availibility, Failover Clutering, RAC, Data Guard</td>
       </tr>
     </tbody></table>
     <hr>
-    <a href="https://www.linkedin.com/in/zolt%C3%A1n-j%C3%A1mbor-277a5275" target="_blank" rel="noopener noreferrer">Kapcsolat</a>
+    <a href="https://www.linkedin.com/in/zolt%C3%A1n-j%C3%A1mbor-277a5275">Contact Me</a>
   
   </body>
 </html>
